# zlob

./: Makefile  build.zig  build.zig.zon
.github/workflows/: build.yml
bench/: bench_brace.zig  bench_fnmatch.zig  bench_matchPaths.zig  bench_multi_suffix.zig  bench_tree_sizes.zig  benchmark.zig  compare_libc.zig  compare_walker.zig  perf_recursive.zig  perf_test_libc.zig  profile_big_repo.zig  test_recursive.zig
rust/: Cargo.toml
src/: brace_optimizer.zig  c_lib.zig  gitignore.zig  lib.zig  main.zig  utils.zig  walker.zig  zlob.zig
test/: test_append.zig  test_brace.zig  test_c_api.c  test_errfunc.zig  test_gitignore_e2e.zig  test_glibc.zig  test_posix.zig  test_rust_glob.zig  test_utils.zig
