[package]
name = "zlob"
version = "1.3.1"
edition = "2021"
license = "MIT"
description = "SIMD optimized glob pattern matching library faster than glob crate"
keywords = ["glob", "pattern", "matching", "simd", "gitignore"]
categories = ["filesystem", "text-processing"]
readme = "README.md"
repository = "https://github.com/dmtrKovalenko/zlob"
homepage = "https://github.com/dmtrKovalenko/zlob"
documentation = "https://docs.rs/zlob"
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/Cargo.lock", 
    "/build.rs",
    "/README.md",
    # Zig build system (symlinks resolved by cargo during packaging)
    "/build.zig",
    "/build.zig.zon",
    "/include/**/*",
    # Zig sources - symlinked as zig-src/, will be copied to package
    "/zig-src/**/*.zig",
    "!/zig-src/.zig-cache/**",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "2"

[build-dependencies]
bindgen = "0.70"

[dev-dependencies]
tempfile = "3"
